<resources>
    <string name="app_name">Finance Guard</string>

    <string name="register">Register</string>
    <string name="register_up">REGISTER</string>
    <string name="login">Login</string>
    <string name="login_up">LOGIN</string>
    <string name="message_login_page">Didn\'t have an account?</string>
    <string name="message_register_page">Had one?</string>
    <string name="title_register_page">CREATE NEW ACCOUNT</string>

    <string name="register_welcome_page">Please register first to use this App</string>
    <string name="login_welcome_page">Already have one?</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password Confirmation</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="Settings">Settings</string>
    <string name="about_anna">About Anna</string>
    <string name="logout">Log Out</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="new_chat_room">New Chat Room</string>
    <string name="title">Title</string>
    <string name="date">date</string>
    <string name="delete">delete</string>
    <string name="edit_title">Edit Title</string>

    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="dictionary">Dictionary</string>
    <string name="profile">Profile</string>
    <string name="retry">Retry</string>
    <string name="lets_start">Let\'s Get Started!</string>
    <string name="insert_word">Insert word</string>
    <string name="description">Description :</string>
    <string name="no_definition_available">No definition available</string>

    <string name="about_anna_title">FinanceGuard - Managing your money is about to get a lot better.</string>
    <string name="about_anna_description">FinanceGuard</string>
    <string name="our_team">Our Team</string>
    <string name="our_team_description">ML  – Kadek Dika Rama Suryadi\nML – Arffia Shannia Jefftin\nCC – Farhan Hafidz\nCC – Mohammad Ahnaf Fauzan\nCC – Aditya Mochamad Akbar\nMD – Muhammad Syah Difa Lubis\nMD – Muhammad Bayu</string>
    <string name="dictionary_description">https://creativecommons.org/licenses/by-sa/3.0/</string>

    <string name="invalid_email_error">Invalid email</string>
    <string name="short_password_error">Password cannot be less than 8 characters</string>

    <string name="display_header">Display</string>
    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_auto" translatable="false">auto</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>
    <string name="transaction_history">Transaction History</string>
</resources>